--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -30,36 +30,54 @@ en:
 
       2. The effect is supported by silver (Ag) ions, which enhance the effect of peroxide in a catalytic process. They also inhibit metabolism (where present) and the ability of microbes to multiply.
 
+      ![Illustration of Sanosil Ag molecules destroying a bacterium](/assets/bacteria-fighting-sanosil-w-logo.png)
+
       **This process can increase the disinfectant effect by up to 800%.**
 
       After application, hydrogen peroxide (H<sub>2</sub>O<sub>2</sub>) is completely decomposed into water (H<sub>2</sub>O) and oxygen (O<sub>2</sub>). The small amounts of silver (Ag) remaining on the surface after peroxide decomposition inhibit microbial proliferation for up to 72 hours.
+
+      ## Why disinfect with Sanosil H<sub>2</sub>O<sub>2</sub>&nbsp;+&nbsp;Ag products?
+
+      - **You don’t have to wash them away.** You just clean the polluted surface, apply Sanosil and let it dry. That’s it.
+      - **Countless usage applications.** Sanosil Super 25 and the S-Series disinfectants can be dilluted (always following the instructions of the manufacturer) for use in different sectors and areas, including water.
+      - **Long shelf life.** The undiluted Sanosil Super 25 stays perfectly effective for at least two years. After that time, it remains effective but loses some of its potency.
+
+      If it sounds like Sanosil disinfectants could make your work more effective, get in touch with us.
     zip: 
       loc: /uploads/SANOSIL_Super_25_Water_Disinfectant_V2.1_GREEK.pdf
       size: 25 MB
-    docs: 
-      - file: /uploads/SANOSIL_Super_25_Water_Disinfectant_V2.1_GREEK.pdf
-        title: Sanosil Super 25
-        type: ZIP με αρχεία PDF
-        description: 'Και οι αραιώσεις του: S015, S010, S003 (Active ingredients: H₂O₂ and Ag)'
-        bg-color: washed-blue
-        text-color: dark-blue
-      - file: /uploads/Sanosil - Ιατρικές εφαρμογές και πληροφορίες από τη Theeta - v3.pdf
-        title: Applications in the Medical Field
-        type: PDF
-        description: Αεροζόλ/νεφελοποίηση, νοσοκομεία/ιδρυματική περίθαλψη, καταπολέμηση οσμών
-        bg-color: washed-green
-        text-color: dark-green
-      - file: /uploads/Sanosil - Διαχείριση Εγκαταστάσεων από τη Theeta - v2.pdf
-        title: Applications in Facility Management
-        type: PDF
-        description: Καθαρισμός επιφανειών / συστημάτων εξαερισμού HVAC / μετά από πλημμύρες / λεγεωνέλλας στο νερό
-        bg-color: washed-yellow
-        text-color: dark-red
+    # docs: 
+    #   - file: /uploads/SANOSIL_Super_25_Water_Disinfectant_V2.1_GREEK.pdf
+    #     title: Sanosil Super 25
+    #     type: ZIP με αρχεία PDF
+    #     description: 'Και οι αραιώσεις του: S015, S010, S003 (Active ingredients: H₂O₂ and Ag)'
+    #     bg-color: washed-blue
+    #     text-color: dark-blue
+    #   - file: /uploads/Sanosil - Ιατρικές εφαρμογές και πληροφορίες από τη Theeta - v3.pdf
+    #     title: Applications in the Medical Field
+    #     type: PDF
+    #     description: Αεροζόλ/νεφελοποίηση, νοσοκομεία/ιδρυματική περίθαλψη, καταπολέμηση οσμών
+    #     bg-color: washed-green
+    #     text-color: dark-green
+    #   - file: /uploads/Sanosil - Διαχείριση Εγκαταστάσεων από τη Theeta - v2.pdf
+    #     title: Applications in Facility Management
+    #     type: PDF
+    #     description: Καθαρισμός επιφανειών / συστημάτων εξαερισμού HVAC / μετά από πλημμύρες / λεγεωνέλλας στο νερό
+    #     bg-color: washed-yellow
+    #     text-color: dark-red
     youtube: 
-      - id: kxFtVoCbTFY
-        title: Disinfect an entire room with Sanosil Q-Jet Advanced
+      - id: Fcb4YhHncKA
+        title: How Sanosil Works
+      - id: 1XTci6in0MM
+        title: Sanosil Disinfectants - Advantageous 2-phase Effect
       - id: 6dv9BU7zNFs
-        title: Sanosil Q-Jet Advanced
+        title: Sanosil Q-Jet Advanced fogger
+      - id: kxFtVoCbTFY
+        title: Disinfect an entire room with the Sanosil Q-Jet <b>Advanced</b> fogger
+      - id: 834oQLC5xlE
+        title: Disinfect an entire room with the Sanosil Q-Jet <b>Superior</b> fogger
+      - id: LNAaEtb6HzE
+        title: Airless spray device room disinfection with Sanosil disinfectant
   - name: Miravento
     logo: /assets/logo-miravento-dark.svg
     cover: /assets/vineyards.jpg
@@ -99,9 +117,19 @@ el:
 
       2. Το αποτέλεσμα υποστηρίζεται από ιόντα αργύρου (Ag), τα οποία ενισχύουν την επίδραση του υπεροξειδίου σε μια καταλυτική διαδικασία. Εμποδίζουν επίσης τον μεταβολισμό (όπου υπάρχει) και την ικανότητα των μικροβίων να πολλαπλασιάζονται.
 
+      ![Απεικόνιση των μορίων Sanosil Ag που καταστρέφουν ένα βακτήριο](/assets/bacteria-fighting-sanosil-w-logo.png)
+
       **Αυτή η διαδικασία μπορεί να αυξήσει το απολυμαντικό αποτέλεσμα έως και 800%.**
       
       Μετά την εφαρμογή, το υπεροξείδιο του υδρογόνου (H<sub>2</sub>O<sub>2</sub>) διασπάται πλήρως σε νερό (H<sub>2</sub>O) και οξυγόνο (O<sub>2</sub>). Οι μικρές ποσότητες αργύρου (Ag) που παραμένουν στην επιφάνεια μετά τη διάσπαση του υπεροξειδίου αναστέλλουν τον πολλαπλασιασμό των μικροβίων για έως και 72 ώρες.
+
+      ## Γιατί να απολυμάνετε με προϊόντα Sanosil H<sub>2</sub>O<sub>2</sub>&nbsp;+&nbsp;Ag;
+
+      - **Δεν χρειάζοται ξέπλυμα.** Απλά καθαρίζετε τη μολυσμένη επιφάνεια, εφαρμόζετε το Sanosil και το αφήνετε να στεγνώσει. Αυτό είναι όλο.
+      - **Αμέτρητες εφαρμογές χρήσης.** Το Sanosil Super 25 και τα απολυμαντικά της σειράς S μπορούν να αραιωθούν (ακολουθώντας πάντα τις οδηγίες του κατασκευαστή) για χρήση σε διάφορους τομείς και περιοχές, συμπεριλαμβανομένου του νερού.
+      - **Μακρά διάρκεια ζωής.** Το μη αραιωμένο Sanosil Super 25 παραμένει απόλυτα αποτελεσματικό για τουλάχιστον δύο χρόνια. Μετά από αυτό το χρονικό διάστημα, παραμένει αποτελεσματικό αλλά χάνει μέρος της ισχύος του.
+
+      Αν σας φαίνεται ότι τα απολυμαντικά Sanosil θα μπορούσαν να κάνουν την εργασία σας πιο αποτελεσματική, επικοινωνήστε μαζί μας.
     zip: 
       loc: /uploads/SANOSIL_Super_25_Water_Disinfectant_V2.1_GREEK.pdf
       size: 25 MB
@@ -125,10 +153,18 @@ el:
         bg-color: washed-yellow
         text-color: dark-red
     youtube: 
-      - id: kxFtVoCbTFY
-        title: Απολυμάνετε ένα ολόκληρο δωμάτιο με τον νεφελοποιητή Sanosil Q-Jet Advanced
+      - id: Fcb4YhHncKA
+        title: Πως λειτουργεί το Sanosil
+      - id: 1XTci6in0MM
+        title: Απολυμαντικά Sanosil - Πλεονεκτικό αποτέλεσμα 2 φάσεων
       - id: 6dv9BU7zNFs
-        title: Sanosil Q-Jet Advanced
+        title: Νεφελοποιητής Sanosil Q-Jet Advanced
+      - id: kxFtVoCbTFY
+        title: Απολύμανση ενός ολόκληρου δωματίου με το νεφελοποιητή Sanosil Q-Jet <b>Advanced</b>
+      - id: 834oQLC5xlE
+        title: πολύμανση ενός ολόκληρου δωματίου με το νεφελοποιητή Sanosil Q-Jet <b>Superior</b>
+      - id: LNAaEtb6HzE
+        title: Απολύμανση χώρου με συσκευή airless spray και απολυμαντικό Sanosil
   - name: Miravento
     logo: /assets/logo-miravento-dark.svg
     cover: /assets/vineyards.jpg
@@ -136,6 +172,13 @@ el:
     intro: Από το 2022, η Theeta εισάγει στην ευρωπαϊκή αγορά τη σειρά κρασιών Miravento της Cantina Vallebelbo. Μια απολαυστική συλλογή από υψηλής ποιότητας ιταλικά αφρώδη κρασιά, κατάλληλα για κάθε περίσταση. Στην επεκτεινόμενη σειρά πρωταγωνιστούν το Moscato d’Asti DOCG, το Moscato Spumante Rosé και το Prosecco DOC.
     tags: moscato d’asti, prosecco, ιταλικό κρασί, λευκό κρασί
     url: miravento
+    docs: 
+      - file: /uploads/Theeta - Miravento Sparkling Wines FEB 2022 EL - website.pdf
+        title: Παρουσίαση Κρασιών Miravento 2022
+        type: PDF
+        description: Moscato d’Asti DOCG, Moscato Rosé, Prosecco DOC
+        bg-color: washed-red
+        text-color: dark-red
 nl: 
   - name: Beckher
     logo: /assets/beckher-logo-horizontal-gradient-orange.png
@@ -168,9 +211,19 @@ nl:
 
       2. Dit effect wordt ondersteund door zilverionen (Ag), die het effect van peroxide in een katalytisch proces versterken. Zij remmen ook het metabolisme (waar aanwezig) en het vermogen van microben om zich te vermenigvuldigen.
 
+      ![Illustratie van Sanosil Ag-moleculen die een bacterie vernietigen](/assets/bacteria-fighting-sanosil-w-logo.png)
+
       **Dit proces kan de desinfecterende werking tot 800% verhogen.**
 
       Na het aanbrengen wordt waterstofperoxide (H<sub>2</sub>O<sub>2</sub>) volledig afgebroken in water (H<sub>2</sub>O) en zuurstof (O<sub>2</sub>). De kleine hoeveelheden zilver (Ag) die na ontleding met peroxide op het oppervlak achterblijven, remmen de microbiële proliferatie tot 72 uur lang.
+
+      ## Waarom ontsmetten met Sanosil H<sub>2</sub>O<sub>2</sub> + Ag producten?
+
+      - **U hoeft ze niet weg te wassen.** U reinigt gewoon het vervuilde oppervlak, brengt Sanosil aan en laat het drogen. Dat is alles.
+      - **Telbare gebruikstoepassingen.** Sanosil Super 25 en de ontsmettingsmiddelen uit de S-serie kunnen (altijd volgens de instructies van de fabrikant) worden gedilateerd voor gebruik in verschillende sectoren en gebieden, waaronder water.
+      - Lange houdbaarheid.** Het onverdunde Sanosil Super 25 blijft ten minste twee jaar perfect werkzaam. Na die tijd blijft het effectief, maar verliest het iets van zijn werkzaamheid.
+
+      Als het klinkt alsof Sanosil ontsmettingsmiddelen uw werk effectiever zouden kunnen maken, neem dan contact met ons op.
     # docs: 
     #   - file: /uploads/SANOSIL_Super_25_Water_Disinfectant_V2.1_GREEK.pdf
     #     title: Sanosil Super 25
@@ -191,10 +244,18 @@ nl:
     #     bg-color: washed-yellow
     #     text-color: dark-red
     youtube: 
-      - id: kxFtVoCbTFY
-        title: Desinfecteer een hele ruimte met de Sanosil Q-Jet Advanced fogger
+      - id: Fcb4YhHncKA
+        title: Hoe Sanosil werkt
+      - id: 1XTci6in0MM
+        title: Sanosil ontsmettingsmiddelen - voordelige 2-fasen werking
       - id: 6dv9BU7zNFs
-        title: Sanosil Q-Jet Advanced
+        title: Sanosil Q-Jet Advanced fogger
+      - id: kxFtVoCbTFY
+        title: Desinfecteer een hele ruimte met de Sanosil Q-Jet <b>Advanced</b> fogger
+      - id: 834oQLC5xlE
+        title: Desinfecteer een hele ruimte met de Sanosil Q-Jet <b>Superior</b> fogger
+      - id: LNAaEtb6HzE
+        title: Airless sproeiapparaat voor desinfectie van de ruimte met Sanosil-desinfectiemiddel
   - name: Miravento
     logo: /assets/logo-miravento-dark.svg
     cover: /assets/vineyards.jpg
