--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -35,8 +35,46 @@ en:
       url: 
   footnote: 'Privacy Notice: We use [privacy-friendly analytics](https://volument.com/privacy/) to collect anonymous data, like number of visitors. Opt out by blocking third party cookies from your browser’s settings.'
   credits: > 
+    Website and Logo by [Anna](https://annafilou.com). 
     3D cards by [Figar Ali](https://codepen.io/figarali) (MIT Licence). 
-    Website and Logo by [Anna](https://annafilou.com).
+el: 
+  columns:
+  - heading: Μάρκες
+    links: 
+    - name: Beckher
+      url: beckher
+    - name: Sanosil
+      url: sanosil
+    - name: Miravento
+      url: miravento
+  - heading: Εταιρεία
+    links: 
+    - name: Σχετικά με εμάς
+      url: about
+    - name: Πελάτες
+      url: clients
+    - name: Νέα
+      url: news
+    - name: Καριέρα
+      url: careers
+    - name: Επικοινωνία
+      url: contact
+  - heading: Γραφείο
+    links: 
+    - name: B. Amsterdam <br>
+            763a Johan Huizingalaan,
+            1066&nbsp;VH, Amsterdam,&nbsp;NL
+      url: https://goo.gl/maps/rG7iEz6UKNA3B2iPA
+  - heading: Ταχυδρομική θυρίδα
+    links: 
+    - name: Theeta B.V. <br>
+            Postbus 321, <br>
+            3990&nbsp;GC, Houten, NL
+      url: 
+  footnote: 'Δήλωση απορρήτου: Χρησιμοποιούμε [πρόγραμμα ανάλυσης επισκέψεων φιλικό προς την προστασία των προσωπικών σας δεδομένων](https://volument.com/privacy/) για τη συλλογή ανώνυμων δεδομένων, όπως ο αριθμός των επισκεπτών. Κάντετε opt out μπλοκάροντας τα cookies τρίτων από τις ρυθμίσεις του προγράμματος περιήγησής σας.'
+  credits: > 
+    Ιστοσελίδα και λογότυπο από [Άννα](https://annafilou.com). 
+    3D κάρτες από [Figar Ali](https://codepen.io/figarali) (Άδεια χρήσης MIT). 
 nl: 
   columns:
   - heading: Merken
@@ -73,5 +111,5 @@ nl:
       url: 
   footnote: 'Privacy verklaring: Wij gebruiken [privacy-vriendelijke analytics](https://volument.com/privacy/) om anonieme gegevens te verzamelen, zoals het aantal bezoekers. Opt-out door het blokkeren van cookies van derden in de instellingen van uw browser.'
   credits: > 
-    3D kaarten door Figar [Figar Ali](https://codepen.io/figarali) (MIT-licentie). 
     Website en Logo door [Anna](https://annafilou.com).
+    3D kaarten door Figar [Figar Ali](https://codepen.io/figarali) (MIT-licentie).
