--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -85,6 +85,49 @@ en:
     intro: Starting in 2022, Theeta introduced Cantina Vallebelbo’s Miravento Line of wines to the European market. A delightful selection of high-quality Italian sparkling wines, appropriate for any occasion. The expanding range stars Moscato d’Asti DOCG, Moscato Spumante Rosé, and Prosecco DOC.
     tags: moscato d’asti, prosecco, italian wine, white wine
     url: miravento
+    text: | 
+      ## A historic legacy
+
+      Since 1956, Vallebelbo has been harvesting and vinifying grapes produced by 160 associated producers who own some 500 hectares of beautiful vineyards in the Langhe hills.
+
+      Now, in exclusive collaboration with Theeta, the new Miravento range is coming to Greece and Europe.
+
+      ## Moscato d'Asti
+      **DOCG** (*Controlled and Guaranteed Designation of Origin*)
+
+      ![](/assets/miravento-moscato-dasti.jpg)
+
+      **Production area**: Piedmont  
+      **Grape variety**: Muscat
+
+      - Straw yellow with a fine colour and a persistent natural coating.
+      - Slightly sweet, aromatic and characteristic taste.
+      - Ideal accompaniment for all desserts and especially for dried biscuits, nougat and fruit salads.
+      - 8–10 °C / 750 ml / 5,5% Vol
+
+      
+      ## Moscato Rosé
+      *Sweet sparkling wine*
+
+      ![](/assets/miravento-moscato-rose.jpg)
+
+      **Production area**: Piedmont  
+      **Grape variety**: Muscat
+
+      - Light pink colour with bright reflections and a fine and persistent sparkling.
+      - Intense, fresh and floral aroma.
+      - Characteristic, sweet, velvety taste.
+      - Delicious with unstuffed desserts, pastries, filled tarts.
+      - 6–8°C / 750 ml / 6,5% Vol
+
+      ## Prosecco DOC — **New & Exclusive**
+      **DOC** (*Controlled Designation of Origin*)  
+
+      ![](/assets/miravento-prosecco.jpg)
+
+      Prosecco DOC joins the Miravento range on request from Theeta and comes to complete the range by offering a dry option.
+
+      **Soon to be available in stores in Greece.**
 el: 
   - name: Beckher
     logo: /assets/beckher-logo-horizontal-gradient-orange.png
@@ -172,6 +215,50 @@ el:
     intro: Από το 2022, η Theeta εισάγει στην ευρωπαϊκή αγορά τη σειρά κρασιών Miravento της Cantina Vallebelbo. Μια απολαυστική συλλογή από υψηλής ποιότητας ιταλικά αφρώδη κρασιά, κατάλληλα για κάθε περίσταση. Στην επεκτεινόμενη σειρά πρωταγωνιστούν το Moscato d’Asti DOCG, το Moscato Spumante Rosé και το Prosecco DOC.
     tags: moscato d’asti, prosecco, ιταλικό κρασί, λευκό κρασί
     url: miravento
+    text: | 
+      ## Μία ιστορική κληρονομιά
+
+      Από το 1956, η Vallebelbo συλλέγει και οινοποιεί τα σταφύλια που παράγονται από 160 συνδεδεμένους παραγωγούς, οι οποίοι κατέχουν περίπου 500 εκτάρια πανέμορφων αμπελώνων στους λόφους Langhe.
+
+      Τώρα, σε αποκλειστική συνεργασία με την Theeta, η νέα σειρά Miravento έρχεται στην Ελλάδα και την Ευρώπη.
+
+      ## Moscato d’Asti
+      **DOCG** (*Ελεγχόμενη και Εγγυημένη Ονομασία Προέλευσης*)
+
+      ![](/assets/miravento-moscato-dasti.jpg)
+
+      **Περιοχή Παραγωγής**: Πιεμόντε  
+      **Ποικιλία Σταφυλιών**: Μοσχάτο
+
+      - Αχυροκίτρινο με λεπτό χρώμα και επίμονο φυσικό περικάλυμμα.
+      - Ελαφρώς γλυκιά, αρωματική και χαρακτηριστική γεύση.
+      - Ιδανικό συνοδευτικό για όλα τα επιδόρπια και ιδίως για αποξηραμένα μπισκότα, νουγκά και φρουτοσαλάτες.
+      - 8–10 °C / 750 ml / 5,5% Vol
+
+      
+      ## Moscato Rosé
+      *Οίνος Γλυκός Αφρώδης*
+
+      ![](/assets/miravento-moscato-rose.jpg)
+
+      **Περιοχή Παραγωγής**: Πιεμόντε  
+      **Ποικιλία Σταφυλιών**: Μοσχάτο
+
+      - Αανοιχτό ροζ χρώμα με φωτεινές αντανακλάσεις και λεπτό και επίμονο περλάζ.
+      - Έντονο, φρέσκο και λουλουδάτο άρωμα.
+      - Χαρακτηριστική, γλυκιά, βελούδινη γεύση.
+      - Απολαυστικό με επιδόρπια χωρίς γέμιση, γλυκά, γεμιστές τάρτες.
+      - 6–8°C / 750 ml / 6,5% Vol
+
+      ## Prosecco DOC — **New & Exclusive**
+      **DOC** (*Ελεγχόμενη Ονομασία Προέλευσης*)  
+
+      ![](/assets/miravento-prosecco.jpg)
+
+      To Prosecco DOC μπαίνει στη σειρά Miravento κατά παραγγελία της Theeta και έρχεται να ολοκληρώσει τη σειρά προσφέροντας μία ξηρή επιλογή.
+
+      **Σύντομα σε καταστήματα στην Ελλάδα.**
+
     docs: 
       - file: /uploads/Theeta - Miravento Sparkling Wines FEB 2022 EL - website.pdf
         title: Παρουσίαση Κρασιών Miravento 2022
@@ -263,3 +350,46 @@ nl:
     intro: Vanaf 2022 introduceert Theeta de Miravento wijnlijn van Cantina Vallebelbo op de Europese markt. Een verrukkelijke selectie van hoogwaardige Italiaanse mousserende wijnen, geschikt voor elke gelegenheid. Het groeiende assortiment bestaat uit Moscato d’Asti DOCG, Moscato Spumante Rosé, en Prosecco DOC.
     tags: moscato d’asti, prosecco, italiaanse wijn, witte wijn
     url: miravento
+    text: | 
+          ## Een historisch erfgoed
+
+          Sinds 1956 oogst en vinifieert Vallebelbo de druiven van 160 aangesloten producenten, die ongeveer 500 hectare aan prachtige wijngaarden in de Langhe heuvels bezitten.
+
+          In exclusieve samenwerking met Theeta komt de nieuwe Miravento-lijn nu naar Griekenland en Europa.
+
+          ## Moscato d’Asti
+          **DOCG** (*Gecontroleerde en gegarandeerde oorsprongsbenaming*)
+
+          ![](/assets/miravento-moscato-dasti.jpg)
+
+          **Productiegebied**: Piedmont  
+          **Druivenras**: Muskaat
+
+          - Strogeel met een fijne kleur en een hardnekkige natuurlijke coating.
+          - Lichtzoete, aromatische en karakteristieke smaak.
+          - Ideaal bij alle desserts en vooral bij gedroogde koekjes, noga en fruitsalades.
+          - 8–10 °C / 750 ml / 5,5% Vol
+
+          
+          ## Moscato Rosé
+          *Zoete mousserende wijn*
+
+          ![](/assets/miravento-moscato-rose.jpg)
+
+          **Productiegebied**: Piedmont  
+          **Druivenras**: Muskaat
+
+          - Lichtroze kleur met heldere reflecties en een fijne en persistente parelmoerkleur.
+          - Intens, fris en bloemig aroma.
+          - Karakteristieke, zoete, fluweelachtige smaak.
+          - Heerlijk bij ongevulde desserts, gebakjes, gevulde taarten.
+          - 6–8°C / 750 ml / 6,5% Vol
+
+          ## Prosecco DOC — **New & Exclusive**
+          **DOC** (*Gecontroleerde oorsprongsbenaming*)  
+
+          ![](/assets/miravento-prosecco.jpg)
+
+          Prosecco DOC voegt zich op verzoek van Theeta bij het Miravento-gamma en maakt het gamma compleet door een droge optie aan te bieden.
+
+          **Binnenkort verkrijgbaar in de winkels in Griekenland.**
