--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -112,4 +112,4 @@ nl:
   footnote: 'Privacy verklaring: Wij gebruiken [privacy-vriendelijke analytics](https://volument.com/privacy/) om anonieme gegevens te verzamelen, zoals het aantal bezoekers. Opt-out door het blokkeren van cookies van derden in de instellingen van uw browser.'
   credits: > 
     Website en Logo door [Anna](https://annafilou.com).
-    3D kaarten door Figar [Figar Ali](https://codepen.io/figarali) (MIT-licentie).
+    3D kaarten door [Figar Ali](https://codepen.io/figarali) (MIT-licentie).
