--- a/_data/index.yml
+++ b/_data/index.yml
@@ -31,7 +31,7 @@ en:
       text: Become part of a fast-moving team and take agency over your work in customer relations, operations, or e-commerce.
       url: careers
 el: 
-  h1: Τα <em>Μάρκες μας</em>
+  h1: Οι <em>Μάρκες μας</em>
   subheadline: Η Theeta αποτελείται από παραρτήματα που δραστηριοποιούνται σε διάφορους τομείς εισαγωγών, εξαγωγών και παραγωγής.
   block-2: 
     title: Η <em>φιλοδοξία</em> βρίσκεται στον πυρήνα αυτού που κάνουμε.
