--- a/_data/index.yml
+++ b/_data/index.yml
@@ -40,7 +40,7 @@ el:
 
       Αν και η Theeta είναι μια νέα εταιρεία, δημιουργήθηκε και διοικείται από ανθρώπους που έχουν περισσότερα από 20 χρόνια εμπειρίας ο καθένας στη διοίκηση επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
 
-      Μεταξύ της επίβλεψης της παραγωγής της δικής μας μάρκας συσκευών, της Beckher, και της βοήθειας των υφιστάμενων εμπορικών σημάτων, όπως η Sanosil και η Miravento, να επεκταθούν με τη βοήθεια του δικτύου μας, εκμεταλλευόμαστε ευκαιρίες σε πολλούς τομείς και στοχεύουμε πάντα ψηλά.
+      Μεταξύ της επίβλεψης της παραγωγής της δικής μας μάρκας συσκευών, Beckher, και της διανομής στο δικτύου μας υφιστάμενων εμπορικών σημάτων, όπως Sanosil και Miravento, εκμεταλλευόμαστε ευκαιρίες σε πολλούς τομείς και στοχεύουμε πάντα ψηλά.
   clients: 
     title: Μερικοί από τους <em>Πελάτες</em> μας
   brands: 
