text contact translations

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -101,13 +101,13 @@ nl:
     links: 
     - name: B. Amsterdam <br>
             763a Johan Huizingalaan, <br>
-            1066&nbsp;VH, Amsterdam,&nbsp;NL
+            1066&nbsp;VH, Amsterdam
       url: https://goo.gl/maps/rG7iEz6UKNA3B2iPA
   - heading: Postbus
     links: 
     - name: Theeta B.V. <br>
             Postbus 321, <br>
-            3990&nbsp;GC, Houten, NL
+            3990&nbsp;GC, Houten
       url: 
   footnote: 'Privacy verklaring: Wij gebruiken [privacy-vriendelijke analytics](https://volument.com/privacy/) om anonieme gegevens te verzamelen, zoals het aantal bezoekers. Opt-out door het blokkeren van cookies van derden in de instellingen van uw browser.'
   credits: > 
